Bio and home page

--- a/attorney.html
+++ b/attorney.html
@@ -83,7 +83,7 @@
 							<div class="text pt-4">
 								<h3>Dr Mayank (MBBS)</h3>
 								<span class="position mb-2">Physician</span>
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+								<p> Intern from Ram Manohar Lohia hospital, Delhi. He provided his services in FORTIS HOSPITAL , Gurgaon,Delhi. He then worked in DIN DAYAL UPADHYAY HOSPITAL, Delhi as well. Later, he entered Government services and currently posted as Medical officer, National health mission, Ramgarh. He has a warm , friendly nature and has an empathetic approach towards patiens</p>
 								<ul class="ftco-social d-flex">
 	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -99,7 +99,7 @@
 							<div class="text pt-4">
 								<h3>Dr Sarita (BDS)</h3>
 								<span class="position mb-2">Senior Dentist</span>
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+								<p>Rich experience of 7 years, worked as Senior Dentist & Consultant in a very reputed dental hospital in Bengaluru, Karnataka. Compassionate & committed to improve patients health , appearance, self confidence and overall quality of life. She has vast experience in general dentistry with a passion for cosmetic and preventive dentistry as well.</p>
 								<ul class="ftco-social d-flex">
 	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
