--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 					</div>
 					<div class="col-md-7 col-lg-8">
 						<div class="row pl-md-4">
-		          <div class="col-lg-6 d-flex align-self-stretch ftco-animate">
+		          <div class="col-lg-6 d-flex align-self-stretch ftco-animate" >
 		            <div class="media block-6 services d-flex">
-		              <div class="icon d-flex justify-content-center align-items-center">
-		            		<span class="flaticon-family-room"></span>
+		              <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+		            		<!--<span class="flaticon-family-room"></span>-->
 		              </div>
 		              <div class="media-body pl-4">
 		                <h3 class="heading">Restorative Dentistry</h3>
@@ -130,8 +130,8 @@
 		          </div>
 		          <div class="col-lg-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-flex">
-		              <div class="icon d-flex justify-content-center align-items-center">
-		            		<span class="flaticon-bar-chart"></span>
+		              <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+		            		<!--<span class="flaticon-bar-chart"></span>-->
 		              </div>
 		              <div class="media-body pl-4">
 		                <h3 class="heading">Painless root canals</h3>
@@ -143,8 +143,8 @@ Root canals can now be performed easier, faster and with minimal discomfort.</p>
 		          </div>
 		          <div class="col-lg-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-flex">
-		              <div class="icon d-flex justify-content-center align-items-center">
-		            		<span class="flaticon-medicine"></span>
+		              <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+		            		<!--<span class="flaticon-medicine"></span>-->
 		              </div>
 		              <div class="media-body pl-4">
 		                <h3 class="heading">Pedodontics/Child Dentistry</h3>
@@ -154,8 +154,8 @@ Root canals can now be performed easier, faster and with minimal discomfort.</p>
 		          </div>
 		          <div class="col-lg-6 d-flex align-self-stretch ftco-animate">
 		            <div class="media block-6 services d-flex">
-		              <div class="icon d-flex justify-content-center align-items-center">
-		            		<span class="flaticon-prison"></span>
+		              <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+		            		<!--<span class="flaticon-prison"></span>-->
 		              </div>
 		              <div class="media-body pl-4">
 		                <h3 class="heading">Dentures/False Teeth - Fixed/Removable</h3>
@@ -214,35 +214,28 @@ We are determined at providing best dental treatment at affordable rates with ou
     			</div>
     			<div class="col-lg-8">
     				<div class="row d-md-flex align-items-center">
+
 		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="18000">0</strong>
-		                <span>Trusted clients</span>
+		                <strong class="number" data-number="576">0</strong>
+		                <span>Solved Cases </span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="1000">0</strong>
-		                <span>Solved Cases</span>
+		                <strong class="number" data-number="545">0</strong>
+		                <span>Cases fixed in one shot</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="1230">0</strong>
-		                <span>Awards Win</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="800">0</strong>
-		                <span>Winning Case</span>
+		                <strong class="number" data-number="576">0</strong>
+		                <span>Satisfied patients</span>
 		              </div>
 		            </div>
 		          </div>
@@ -266,8 +259,8 @@ We are determined at providing best dental treatment at affordable rates with ou
 	          </div>
 	          <div class="pr-md-5 pl-md-5 mr-md-5 mb-5">
 	            <div class="services-wrap d-flex">
-	              <div class="icon d-flex justify-content-center align-items-center">
-	            		<span class="flaticon-balance"></span>
+	              <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+	            		<!--<span class="flaticon-balance"></span>-->
 	              </div>
 	              <div class="media-body pr-4 order-md-first text-md-right">
 	                <h3 class="heading">Sickly Visits, Stomach Ache,Fever</h3>
@@ -275,8 +268,8 @@ We are determined at providing best dental treatment at affordable rates with ou
 	              </div>
 	            </div>
 	            <div class="services-wrap d-flex">
-	              <div class="icon d-flex justify-content-center align-items-center">
-	            		<span class="flaticon-balance"></span>
+	              <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+	            		<!--<span class="flaticon-balance"></span>-->
 	              </div>
 	              <div class="media-body pr-4 order-md-first text-md-right">
 	                <h3 class="heading">24/7 Online / Telephonic Consultations</h3>
@@ -284,8 +277,8 @@ We are determined at providing best dental treatment at affordable rates with ou
 	              </div>
 	            </div>
 	            <div class="services-wrap d-flex">
-	              <div class="icon d-flex justify-content-center align-items-center">
-	            		<span class="flaticon-balance"></span>
+	              <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+	            		<!--<span class="flaticon-balance"></span>-->
 	              </div>
 	              <div class="media-body pr-4 order-md-first text-md-right">
 	                <h3 class="heading">Emergency Dental Treatment</h3>
@@ -293,8 +286,8 @@ We are determined at providing best dental treatment at affordable rates with ou
 	              </div>
 	            </div>
 	            <div class="services-wrap d-flex">
-	              <div class="icon d-flex justify-content-center align-items-center">
-	            		<span class="flaticon-balance"></span>
+	              <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+	            		<!--<span class="flaticon-balance"></span>-->
 	              </div>
 	              <div class="media-body pr-4 order-md-first text-md-right">
 	                <h3 class="heading">Free Dental camps and Health camps</h3>
@@ -312,8 +305,8 @@ We are determined at providing best dental treatment at affordable rates with ou
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Testimony</span>
-            <h2 class="mb-4">Our satisfied customer says</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+            <h2 class="mb-4">Our satisfied patients says</h2>
+            <p>Best place to be</p>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -327,9 +320,10 @@ We are determined at providing best dental treatment at affordable rates with ou
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Marketing Manager</span>
+                    <p class="mb-5 pl-4 line">Consulted Dr. Mayank and he was verfied how i was feeling, wrote few medicines and voila!</p>
+
+                    <p class="name">Ganesh Kumar</p>
+                    <span class="position">Manager, Paytm </span>
                   </div>
                 </div>
               </div>
@@ -341,9 +335,9 @@ We are determined at providing best dental treatment at affordable rates with ou
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Interface Designer</span>
+                    <p class="mb-5 pl-4 line">I went for tooth starightning, which got completed in 1.5 yrs as expected. Normally i have heard it takes around 2+ years</p>
+                    <p class="name">Amit Kumar</p>
+                    <span class="position">Senior Developer, Morgan Stanley</span>
                   </div>
                 </div>
               </div>
@@ -401,7 +395,7 @@ We are determined at providing best dental treatment at affordable rates with ou
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Working Process</span>
             <h2 class="mb-4">Our Working Way</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+            <p>Our step by step approach helps us understanding any case in a better way.</p>
           </div>
         </div>	
 				<div class="row steps d-flex">
@@ -420,7 +414,7 @@ We are determined at providing best dental treatment at affordable rates with ou
 					<div class="col-md-4 d-flex ftco-animate">
 						<div class="step d-flex align-self-stretch">
 							<span>#03</span>
-							<h3>Court of Law Success</h3>
+							<h3>Happy patients</h3>
 						</div>
 					</div>
 				</div>
@@ -431,9 +425,9 @@ We are determined at providing best dental treatment at affordable rates with ou
 			<div class="container">
 				<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
-          	<span class="subheading">Experienced Attorneys</span>
+          	<span class="subheading">Experienced Doctors</span>
             <h2 class="mb-4">Meet our Doctors</h2>
-            <p>MBBS ( Medical Offier Sadar Hospital, Ramgarh. Ex Fortis Physician, Delhi ) &amp; BDS ( Ex dentist in Dr Jagdeesh dental hospital, Bangalore)</p>
+            
           </div>
         </div>	
 				<div class="row">
@@ -441,9 +435,9 @@ We are determined at providing best dental treatment at affordable rates with ou
 						<div class="staff">
 							<div class="img" style="background-image: url(images/person_1.jpg);"></div>
 							<div class="text pt-4">
-								<h3>Dr Mayank (MBBS)</h3>
+								<h3>Dr. Mayank</h3>
 								<span class="position mb-2">Physician</span>
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+								<p>MBBS ( Medical Offier Sadar Hospital, Ramgarh. Ex Fortis Physician, Delhi )</p>
 								<ul class="ftco-social d-flex">
 	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -457,9 +451,9 @@ We are determined at providing best dental treatment at affordable rates with ou
 						<div class="staff">
 							<div class="img" style="background-image: url(images/person_2.jpg);"></div>
 							<div class="text pt-4">
-								<h3>Dr Sarita (BDS)</h3>
+								<h3>Dr. Sarita</h3>
 								<span class="position mb-2">Senior Dentist</span>
-								<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+								<p>BDS ( Ex dentist in Dr Jagdeesh dental hospital, Bangalore)</p>
 				  <ul class="ftco-social d-flex">
 	                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 	                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
