practice page linked from all footers

--- a/about.html
+++ b/about.html
@@ -115,15 +115,7 @@ We are determined at providing best dental treatment at affordable rates with ou
 		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="18000">0</strong>
-		                <span>Trusted clients</span>
-		              </div>
-		            </div>
-		          </div>
-		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-		            <div class="block-18 text-center">
-		              <div class="text">
-		                <strong class="number" data-number="1000">0</strong>
+		                <strong class="number" data-number="576">0</strong>
 		                <span>Solved Cases</span>
 		              </div>
 		            </div>
@@ -131,16 +123,16 @@ We are determined at providing best dental treatment at affordable rates with ou
 		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="1230">0</strong>
-		                <span>Awards Win</span>
+		                <strong class="number" data-number="545">0</strong>
+		                <span>Cases fixed in one shot</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="800">0</strong>
-		                <span>Winning Case</span>
+		                <strong class="number" data-number="576">0</strong>
+		                <span>Satisfied patients</span>
 		              </div>
 		            </div>
 		          </div>
@@ -164,8 +156,7 @@ We are determined at providing best dental treatment at affordable rates with ou
             </div>
             <div class="pr-md-5 pl-md-5 mr-md-5 mb-5">
               <div class="services-wrap d-flex">
-                <div class="icon d-flex justify-content-center align-items-center">
-                  <span class="flaticon-balance"></span>
+                <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
                 </div>
                 <div class="media-body pr-4 order-md-first text-md-right">
                   <h3 class="heading">Sickly Visits, Stomach Ache,Fever</h3>
@@ -173,8 +164,7 @@ We are determined at providing best dental treatment at affordable rates with ou
                 </div>
               </div>
               <div class="services-wrap d-flex">
-                <div class="icon d-flex justify-content-center align-items-center">
-                  <span class="flaticon-balance"></span>
+                <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
                 </div>
                 <div class="media-body pr-4 order-md-first text-md-right">
                   <h3 class="heading">24/7 Online / Telephonic Consultations</h3>
@@ -182,8 +172,7 @@ We are determined at providing best dental treatment at affordable rates with ou
                 </div>
               </div>
               <div class="services-wrap d-flex">
-                <div class="icon d-flex justify-content-center align-items-center">
-                  <span class="flaticon-balance"></span>
+                <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
                 </div>
                 <div class="media-body pr-4 order-md-first text-md-right">
                   <h3 class="heading">Emergency Dental Treatment</h3>
@@ -191,8 +180,7 @@ We are determined at providing best dental treatment at affordable rates with ou
                 </div>
               </div>
               <div class="services-wrap d-flex">
-                <div class="icon d-flex justify-content-center align-items-center">
-                  <span class="flaticon-balance"></span>
+                <div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
                 </div>
                 <div class="media-body pr-4 order-md-first text-md-right">
                   <h3 class="heading">Free Dental camps and Health camps</h3>
@@ -210,8 +198,8 @@ We are determined at providing best dental treatment at affordable rates with ou
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Testimony</span>
-            <h2 class="mb-4">Our satisfied customer says</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+            <h2 class="mb-4">Our satisfied patients says</h2>
+            <p>Best place to get your medical issues fixed</p>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -225,9 +213,9 @@ We are determined at providing best dental treatment at affordable rates with ou
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Marketing Manager</span>
+                    <p class="mb-5 pl-4 line">Consulted Dr. Mayank and he was verfied how i was feeling, wrote few medicines and voila!</p>
+                    <p class="name">Ganesh Kumar</p>
+                    <span class="position">Manager, Paytm </span>
                   </div>
                 </div>
               </div>
@@ -239,9 +227,9 @@ We are determined at providing best dental treatment at affordable rates with ou
                     </span>
                   </div>
                   <div class="text">
-                    <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
-                    <span class="position">Interface Designer</span>
+                    <p class="mb-5 pl-4 line">I went for tooth starightning, which got completed in 1.5 yrs as expected. Normally i have heard it takes around 2+ years</p>
+                    <p class="name">Amit Kumar</p>
+                    <span class="position">Senior Developer, Morgan Stanley</span>
                   </div>
                 </div>
               </div>
@@ -345,11 +333,11 @@ We are determined at providing best dental treatment at affordable rates with ou
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Usefull Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">Family Law</a></li>
-                <li><a href="#">Drug Law</a></li>
-                <li><a href="#">Insurance Law</a></li>
-                <li><a href="#">Criminal Law</a></li>
-                <li><a href="#">Business Law</a></li>
+                <li><a href="practice.html">Family Law</a></li>
+                <li><a href="practice.html">Drug Law</a></li>
+                <li><a href="practice.html">Insurance Law</a></li>
+                <li><a href="practice.html">Criminal Law</a></li>
+                <li><a href="practice.html">Business Law</a></li>
               </ul>
             </div>
           </div>
@@ -358,8 +346,8 @@ We are determined at providing best dental treatment at affordable rates with ou
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Practice Areas</a></li>
-                <li><a href="#">Appointment</a></li>
+                <li><a href="practice.html">Practice Areas</a></li>
+                <li><a href="index.html">Appointment</a></li>
                 <li><a href="#">Terms &amp; Conditions</a></li>
                 <li><a href="#">FAQ</a></li>
               </ul>
