--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ We are determined at providing best dental treatment at affordable rates with ou
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Testimony</span>
             <h2 class="mb-4">Our satisfied patients says</h2>
-            <p>Best place to be</p>
+            <p>Best place to get your medical issues fixed</p>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -583,11 +583,11 @@ We are determined at providing best dental treatment at affordable rates with ou
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Usefull Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">Family Law</a></li>
-                <li><a href="#">Drug Law</a></li>
-                <li><a href="#">Insurance Law</a></li>
-                <li><a href="#">Criminal Law</a></li>
-                <li><a href="#">Business Law</a></li>
+                <li><a href="practice.html">Family Law</a></li>
+                <li><a href="practice.html">Drug Law</a></li>
+                <li><a href="practice.html">Insurance Law</a></li>
+                <li><a href="practice.html">Criminal Law</a></li>
+                <li><a href="practice.html">Business Law</a></li>
               </ul>
             </div>
           </div>
@@ -595,8 +595,8 @@ We are determined at providing best dental treatment at affordable rates with ou
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Practice Areas</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="practice.html">Practice Areas</a></li>
                 <li><a href="#">Appointment</a></li>
                 <li><a href="#">Terms &amp; Conditions</a></li>
                 <li><a href="#">FAQ</a></li>
