--- a/attorney.html
+++ b/attorney.html
@@ -133,11 +133,11 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Usefull Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">Family Law</a></li>
-                <li><a href="#">Drug Law</a></li>
-                <li><a href="#">Insurance Law</a></li>
-                <li><a href="#">Criminal Law</a></li>
-                <li><a href="#">Business Law</a></li>
+                <li><a href="practice.html">Family Law</a></li>
+                <li><a href="practice.html">Drug Law</a></li>
+                <li><a href="practice.html">Insurance Law</a></li>
+                <li><a href="practice.html">Criminal Law</a></li>
+                <li><a href="practice.html">Business Law</a></li>
               </ul>
             </div>
           </div>
@@ -145,9 +145,9 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Practice Areas</a></li>
-                <li><a href="#">Appointment</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="practice.html">Practice Areas</a></li>
+                <li><a href="index.html">Appointment</a></li>
                 <li><a href="#">Terms &amp; Conditions</a></li>
                 <li><a href="#">FAQ</a></li>
               </ul>
