--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
               <h2 class="ftco-heading-2">PrimeLaw</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/amit-kumar-03864284/"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
               </ul>
@@ -142,11 +142,11 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Usefull Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">Family Law</a></li>
-                <li><a href="#">Drug Law</a></li>
-                <li><a href="#">Insurance Law</a></li>
-                <li><a href="#">Criminal Law</a></li>
-                <li><a href="#">Business Law</a></li>
+                <li><a href="practice.html">Family Law</a></li>
+                <li><a href="practice.html">Drug Law</a></li>
+                <li><a href="practice.html">Insurance Law</a></li>
+                <li><a href="practice.html">Criminal Law</a></li>
+                <li><a href="practice.html">Business Law</a></li>
               </ul>
             </div>
           </div>
@@ -154,9 +154,9 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Practice Areas</a></li>
-                <li><a href="#">Appointment</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="practice.html">Practice Areas</a></li>
+                <li><a href="index.html">Appointment</a></li>
                 <li><a href="#">Terms &amp; Conditions</a></li>
                 <li><a href="#">FAQ</a></li>
               </ul>
