--- a/practice.html
+++ b/practice.html
@@ -172,9 +172,9 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="#">Practice Areas</a></li>
-                <li><a href="#">Appointment</a></li>
+                <li><a href="index.html">Appointment</a></li>
                 <li><a href="#">Terms &amp; Conditions</a></li>
                 <li><a href="#">FAQ</a></li>
               </ul>
