--- a/index.html
+++ b/index.html
@@ -598,8 +598,8 @@ We are determined at providing best dental treatment at affordable rates with ou
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="practice.html">Practice Areas</a></li>
                 <li><a href="#">Appointment</a></li>
-                <li><a href="#">Terms &amp; Conditions</a></li>
-                <li><a href="#">FAQ</a></li>
+                <!--<li><a href="#">Terms &amp; Conditions</a></li>-->
+                <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
           </div>
