--- a/about.html
+++ b/about.html
@@ -348,8 +348,8 @@ We are determined at providing best dental treatment at affordable rates with ou
                 <li><a href="#">About Us</a></li>
                 <li><a href="practice.html">Practice Areas</a></li>
                 <li><a href="index.html">Appointment</a></li>
-                <li><a href="#">Terms &amp; Conditions</a></li>
-                <li><a href="#">FAQ</a></li>
+                <!--<li><a href="#">Terms &amp; Conditions</a></li>-->
+                <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
           </div>
