--- a/contact.html
+++ b/contact.html
@@ -157,8 +157,8 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="practice.html">Practice Areas</a></li>
                 <li><a href="index.html">Appointment</a></li>
-                <li><a href="#">Terms &amp; Conditions</a></li>
-                <li><a href="#">FAQ</a></li>
+                <!--<li><a href="#">Terms &amp; Conditions</a></li>-->
+                <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
           </div>
