--- a/contact.html
+++ b/contact.html
@@ -167,9 +167,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Sparh Health Care,Ground floor, Bhoo Lok Apartment, Hinoo Main Road, Ranchi, Jharkhand</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 8249438098 / 8969622981</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">sparshdentalhealthcare@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
