--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
 	        	<li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
 	        	<li class="nav-item"><a href="blog.html" class="nav-link">Case Studies</a></li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+			  <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
 	        </ul>
 	      </div>
 	    </div>
