practice page and faq update

--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@ We are determined at providing best dental treatment at affordable rates with ou
                 </div>
                 <div class="media-body pr-4 order-md-first text-md-right">
                   <h3 class="heading">24/7 Online / Telephonic Consultations</h3>
-                  <p>24/7 Online / Telephonic consultations.</p>
+                  <p>24/7 Online / Telephonic consultations</p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -177,7 +177,7 @@ We are determined at providing best dental treatment at affordable rates with ou
                 </div>
                 <div class="media-body pr-4 order-md-first text-md-right">
                   <h3 class="heading">Emergency Dental Treatment</h3>
-                  <p>Emergency Dental Treatment for pain relief.</p>
+                  <p>Emergency Dental Treatment for pain relief</p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -185,7 +185,7 @@ We are determined at providing best dental treatment at affordable rates with ou
                 </div>
                 <div class="media-body pr-4 order-md-first text-md-right">
                   <h3 class="heading">Free Dental camps and Health camps</h3>
-                  <p>Free Dental check up camps and Health checkup camps.</p>
+                  <p>Free Dental check up camps and Health checkup camps</p>
                 </div>
               </div>
             </div>
