--- a/practice.html
+++ b/practice.html
@@ -72,55 +72,100 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="practice">
-							<a href="#" class="img" style="background-image: url(images/practice-1.jpg);"></a>
+							<a href="#" class="img" style="background-image: url(images/medicine.jpg);"></a>
 							<div class="info">
-								<h3><a href="#">Family Law</a></h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<h3><a href="#">General medicine</a></h3>
+								<p>Our clinic interest lies in handling infectious diseases, lifestyle diseaes, adolescent medicine, geriatric medicine</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="practice">
-							<a href="#" class="img" style="background-image: url(images/practice-2.jpg);"></a>
+							<a href="#" class="img" style="background-image: url(images/preventive.jpg);"></a>
 							<div class="info">
-								<h3><a href="#">Business Law</a></h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<h3><a href="#">Preventive treatment</a></h3>
+								<p>We aim at providing all round care to avoid development of diseases in long run.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="practice">
-							<a href="#" class="img" style="background-image: url(images/practice-3.jpg);"></a>
+							<a href="#" class="img" style="background-image: url(images/HealthCounselling.jpg);"></a>
 							<div class="info">
-								<h3><a href="#">Employment Law</a></h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<h3><a href="#">Health counseling</a></h3>
+								<p>Better advise on life style and infection control for better quality of life for our patients</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="practice">
-							<a href="#" class="img" style="background-image: url(images/practice-4.jpg);"></a>
+							<a href="#" class="img" style="background-image: url(images/prosthetic_dentistry.jpg);"></a>
 							<div class="info">
-								<h3><a href="#">Drug Control Law</a></h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<h3><a href="#">Prosthetic dentistry</a></h3>
+								<p>We design your smile to give you a more natural and beautiful look.</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="practice">
-							<a href="#" class="img" style="background-image: url(images/practice-5.jpg);"></a>
+							<a href="#" class="img" style="background-image: url(images/cosmetic.jpg);"></a>
 							<div class="info">
-								<h3><a href="#">Criminal Law</a></h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<h3><a href="#">Cosmetic dentistry</a></h3>
+								<p>Provides you better smile with cosmetic intervention so that you can flaunt it</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="practice">
-							<a href="#" class="img" style="background-image: url(images/practice-6.jpg);"></a>
+							<a href="#" class="img" style="background-image: url(images/Implant.jpg);"></a>
 							<div class="info">
-								<h3><a href="#">Insurance Law</a></h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<h3><a href="#"> Implant dentistry</a></h3>
+								<p>Fast ,fixed and predictable dental treatment.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="practice">
+							<a href="#" class="img" style="background-image: url(images/orthodontics.jpg);"></a>
+							<div class="info">
+								<h3><a href="#"> Orthodontics</a></h3>
+								<p>Alligns teeth to better positioning so that you can have perfect arrangement of teeth</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="practice">
+							<a href="#" class="img" style="background-image: url(images/oral.jpg);"></a>
+							<div class="info">
+								<h3><a href="#">Oral surgery</a></h3>
+								<p>Aims to remove only what cannot be saved. OUR LAST RESORT</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="practice">
+							<a href="#" class="img" style="background-image: url(images/pediodontics.jpg);"></a>
+							<div class="info">
+								<h3><a href="#">Pedodontics(Pediatric) dentistry</a></h3>
+								<p>All round treatment of kids and teens so that they fall in love with dentistry.Also preparing them for future by teaching better oral hygiene</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="practice">
+							<a href="#" class="img" style="background-image: url(images/periodontal.jpg);"></a>
+							<div class="info">
+								<h3><a href="#">Periodontal </a></h3>
+								<p>Gives you healthy gums- stronger teeth - improves your overall  health.It has been clinically proven to avoid many diseases including heart disease's</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="practice">
+							<a href="#" class="img" style="background-image: url(images/endodontics.jpg);"></a>
+							<div class="info">
+								<h3><a href="#">Endodontics</a></h3>
+								<p>We have best equipment to provide you with best root canals and other restorative treatment</p>
 							</div>
 						</div>
 					</div>
