--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,7 @@
                 </div>-->
                 <div class="media-body pr-4 order-md-first text-md-left">
                   <h3 class="heading">1. Got Toothache ?</h3>
-                  <p>Rinse your mouth with warm water, floss to remove food caught between teeth, and take an over-the-counter pain reliever. See your dentist as soon as possible.</p>
+                  <p>Rinse your mouth with warm water, floss to remove food caught between teeth, See your dentist as soon as possible.</p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -94,7 +94,7 @@
                 </div>-->
                 <div class="media-body pr-4 order-md-first text-md-left">
                   <h3 class="heading">2. Cavities ?</h3>
-                  <p>Brush your teeth at least twice a day with a fluoride toothpaste, limit snacks, floss daily, rinse with a fluoride mouthwash, and keep up with your dental appointments.</p>
+                  <p>Brush your teeth at least twice a day with a fluoride toothpaste, limit snacks, floss daily, and keep up with your dental appointments, don't let them damage your teeth to an irreversible extent.</p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -102,7 +102,7 @@
                 </div>-->
                 <div class="media-body pr-4 order-md-first text-md-left">
                   <h3 class="heading">3. Cracked Tooth ?</h3>
-                  <p>Try to chew on the other side until you see your dentist. If the crack is above the gum line, you may need a root canal and a crown.</p>
+                  <p>Try to chew on the other side until you see your dentist, you may require crown with or without root canal...see your dentist.</p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -126,7 +126,7 @@
                 </div>-->
                 <div class="media-body pr-4 order-md-first text-md-left">
                   <h3 class="heading">6. Clenching or Grinding Your Teeth ?</h3>
-                  <p>Stress is one of the causes. Misaligned teeth or sleep issues can also be culprits among adults. If it’s a daytime problem, try meditation, exercise, or other ways to curb stress.</p>
+                  <p>You dentist may guide you better, however stress is one of the causes. Misaligned teeth or sleep issues can also be culprits among adults.</p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -134,7 +134,7 @@
                 </div>-->
                 <div class="media-body pr-4 order-md-first text-md-left">
                   <h3 class="heading">7. Headaches ?</h3>
-                  <p>Yoga, supplements, essential oils and dietary modifications are all natural, safe and effective ways to reduce headache symptoms.</p>
+                  <p>See your physician, and also get dental isues rules out.</p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -142,7 +142,7 @@
                 </div>-->
                 <div class="media-body pr-4 order-md-first text-md-left">
                   <h3 class="heading">8. Cough and cold ?</h3>
-                  <p>Avoid contact with sick people and keep yourself hygenically clean, stay hydrated, do excercise, get enough sleep. In severe cases see your doctor. </p>
+                  <p>Avoid contact with sick people and keep yourself hygenically clean, stay hydrated, do excercise, get enough sleep. Don't let it go untreated...it may be early symptoms of many diseases. </p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -150,7 +150,7 @@
                 </div>-->
                 <div class="media-body pr-4 order-md-first text-md-left">
                   <h3 class="heading">9. Common fever ?</h3>
-                  <p>Drink lots of fluids, take proper rest, take tepid bath, OTC medications like Ibuprofen and acetaminophen can help reduce a fever and make a person feel more comfortable then see your doctor</p>
+                  <p>Usually indicates some infectious...may be viral or bacterial...seeing your physician will be helpful.</p>
                 </div>
               </div>
               <div class="services-wrap d-flex">
@@ -158,7 +158,39 @@
                 </div>-->
                 <div class="media-body pr-4 order-md-first text-md-left">
                   <h3 class="heading">10. Loose motions ?</h3>
-                  <p>Infrequent cases of loose stools do not typically require medical treatment. However, multiple cases of loose stools can cause dehydration and malnutrition. Take foods which are high in fibre, stay hydrated,use probiotics or use OTC medications like ORS and Imodium.</p>
+                  <p>Infrequent cases of loose stools do not typically require medical treatment. However, multiple cases of loose stools can cause dehydration and malnutrition. Take foods which are high in fibre, stay hydrated,use probiotics.</p>
+                </div>
+              </div>
+			  <div class="services-wrap d-flex">
+                <!--<div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+                </div>-->
+                <div class="media-body pr-4 order-md-first text-md-left">
+                  <h3 class="heading">11. Do I need to arrive early on my 1st visit ?</h3>
+                  <p>Yes...please arrive 10-15 min early to fill up patient information and consent forms.</p>
+                </div>
+              </div>
+			  <div class="services-wrap d-flex">
+                <!--<div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+                </div>-->
+                <div class="media-body pr-4 order-md-first text-md-left">
+                  <h3 class="heading">12. What if I require premedication ?</h3>
+                  <p>We will help you with that,in case required... or if unsure do call us before your appointment.</p>
+                </div>
+              </div>
+			  <div class="services-wrap d-flex">
+                <!--<div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+                </div>-->
+                <div class="media-body pr-4 order-md-first text-md-left">
+                  <h3 class="heading">13. What do I need to bring on my visit ?</h3>
+                  <p>Please bring your personal identification proof, old treatment records,X rays and medication ,if taken.</p>
+                </div>
+              </div>
+			  <div class="services-wrap d-flex">
+                <!--<div class="icon d-flex justify-content-center align-items-center" style="height: 15px; width: 15px;">
+                </div>-->
+                <div class="media-body pr-4 order-md-first text-md-left">
+                  <h3 class="heading">13. What are early signs of dental disease ?</h3>
+                  <p>It usually may be very small like black spot on tooth, food lodgement, sensitivity or pain...if ignored may result in severe tooth ache , swelling or tooth loss.</p>
                 </div>
               </div>
             </div>
