footer useful links updated

--- a/contact.html
+++ b/contact.html
@@ -143,11 +143,11 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Usefull Links</h2>
               <ul class="list-unstyled">
-                <li><a href="practice.html">Family Law</a></li>
-                <li><a href="practice.html">Drug Law</a></li>
-                <li><a href="practice.html">Insurance Law</a></li>
-                <li><a href="practice.html">Criminal Law</a></li>
-                <li><a href="practice.html">Business Law</a></li>
+                <li><a href="practice.html">Cosmetic dentistry</a></li>
+                <li><a href="practice.html">Prosthetic dentistry</a></li>
+                <li><a href="practice.html">Cosmetic dentistry</a></li>
+                <li><a href="practice.html">Implant dentistry</a></li>
+                <li><a href="practice.html">General medicine</a></li>
               </ul>
             </div>
           </div>
