--- a/practice.html
+++ b/practice.html
@@ -119,7 +119,7 @@
 						<div class="practice">
 							<a href="#" class="img" style="background-image: url(images/Implant.jpg);"></a>
 							<div class="info">
-								<h3><a href="#"> Implant dentistry</a></h3>
+								<h3><a href="#">Implant dentistry</a></h3>
 								<p>Fast ,fixed and predictable dental treatment.</p>
 							</div>
 						</div>
@@ -206,11 +206,11 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Usefull Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">Family Law</a></li>
-                <li><a href="#">Drug Law</a></li>
-                <li><a href="#">Insurance Law</a></li>
-                <li><a href="#">Criminal Law</a></li>
-                <li><a href="#">Business Law</a></li>
+                <li><a href="#">Cosmetic dentistry</a></li>
+                <li><a href="#">Prosthetic dentistry</a></li>
+                <li><a href="#">Cosmetic dentistry</a></li>
+                <li><a href="#">Implant dentistry</a></li>
+                <li><a href="#">General medicine</a></li>
               </ul>
             </div>
           </div>
